--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
      <title>Podcast</title>
 </head>
 <body>
-    <h1>Web Design Podcast</h1>
-    <a href="WDFpodcast.mp3">Podcast Episode 1</a> (MP3)
-    <br><a href="WDFpodcast.mp3">Podcast Transcript</a>
+    <h1>Door Country Lighthouse Cruise</h1>
+    <embed type="application/x-shockwave-flash"
+src="lighthouse.swf" quality="high"
+width="320" height="240"
+title="Door County Lighthouse Cruise">
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-     <title>Podcast</title>
-</head>
-<body>
-    <h1>Web Design Podcast</h1>
-    <a href="WDFpodcast.mp3">Podcast Episode 1</a> (MP3)
-    <a href="WDFpodcast.mp3">Podcast Transcript</a>
-</body>
->>>>>>> 3e528af0474a274768cb775dc4dbf35610cb0f43
-</html>
