--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Door Country Lighthouse Cruise</h1>
     <embed type="application/x-shockwave-flash"
-src="lighthouse.swf" quality="high"
+src="lighthouse (3).swf" quality="high"
 width="320" height="240"
 title="Door County Lighthouse Cruise">
 </body>
