--- a/index.html
+++ b/index.html
@@ -2,11 +2,43 @@
 <html lang="en">
 <head>
      <title>Podcast</title>
+     <style>
+     </style>
 </head>
 <body>
     <h1>Door Country Lighthouse Cruise</h1>
     <embed type="application/x-shockwave-flash"
-src="lighthouse (3).swf" quality="high"
+src="lighthouse.swf" quality="high"
 width="320" height="240"
 title="Door County Lighthouse Cruise">
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
