--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <title>Podcast</title>
-     <style>
-     </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Web Design Podcast</title>
 </head>
 <body>
-    <h1>Door Country Lighthouse Cruise</h1>
-    <embed type="application/x-shockwave-flash"
-src="lighthouse.swf" quality="high"
-width="320" height="240"
-title="Door County Lighthouse Cruise">
-<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <h1>Web Design Podcast</h1>
+    <audio controls="controls">
+        <source src="podcast.mp3" type="audio/mpeg">
+        <source src="podcast.ogg" type="audio/ogg">
+        <a href="podcast.mp3">Download the Podcast</a> (MP3)
+    </audio><br>
+    <a href="podcast (1).txt">Podcast Transcipt</a>
 </body>
 </html>
 
