--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Web Design Podcast</title>
+    <title>lighthouse cruise</title>
 </head>
 <body>
-    <h1>Web Design Podcast</h1>
-    <audio controls="controls">
-        <source src="podcast.mp3" type="audio/mpeg">
-        <source src="podcast.ogg" type="audio/ogg">
-        <a href="podcast.mp3">Download the Podcast</a> (MP3)
-    </audio><br>
-    <a href="podcast (1).txt">Podcast Transcipt</a>
+    <h1>Lighthouse Cruise</h1>
+    <video controls="controls" poster="lighthouse.png" width="320" height="240"<source src="lighthouse.m4v" type="video/mp4">
+        <source src="lighthouse.ogv" type="video/ogg">
+        <embed type="application/x-shockwave-flash"
+        src="lighthouse.swf" quality="high" width="320" height="240"
+        title="Door County Lighthouse Cruise">
+    </video>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </body>
 </html>
 
