--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Lighthouse Island Bistro</title>
-<link rel="stylesheet" herf="styles.css">
+<link href="styles.css" rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="bistro.css" rel="stylesheet">
